Fix scrolling issue on mobile #2

--- a/css/style.css
+++ b/css/style.css
@@ -103,9 +103,6 @@ i {
     font-weight: 300;
     color: #b88b4c;
 }
-.logo {
-    display: block;
-}
 
 .zoomimg-wrapper {
     overflow: hidden;
